--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"type": "module",
 	"name": "core",
 	"version": "1.0.0",
 	"description": "",
@@ -12,7 +13,6 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/sat": "^0.0.31",
 		"@typescript-eslint/eslint-plugin": ">=5.43.0",
 		"@typescript-eslint/parser": ">=5.43.0",
 		"eslint": ">=8.0.0",
@@ -22,7 +22,6 @@
 		"typescript": ">=4.4"
 	},
 	"dependencies": {
-		"fast-quadtree-ts": "^0.0.13",
-		"sat": "^0.9.0"
+		"detect-collisions": "^6.6.11"
 	}
 }
