--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"typescript": ">=4.4"
 	},
 	"dependencies": {
-		"detect-collisions": "^6.6.11"
+		"detect-collisions": "^6.6.11",
+		"sat": "^0.9.0"
 	}
 }
