--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,14 +7,14 @@
 	"overrides": [
 		{
 			"extends": ["xo-typescript"],
-			"files": ["*.ts", "*.tsx"]
+			"files": ["*.ts", "*.tsx"],
+			"rules": {
+				"@typescript-eslint/naming-convention": "off"
+			}
 		}
 	],
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module"
-	},
-	"rules": {
-		"@typescript-eslint/prefer-for-of": "off"
 	}
 }
