--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"type": "module",
-	"name": "core",
+	"name": "@gunsurvival/core",
 	"version": "1.0.0",
-	"description": "",
-	"main": "src/index.ts",
+	"description": "Core library for gunsurvival game",
+	"main": "dist/index.js",
 	"scripts": {
 		"start": "node dist/index.js",
-		"build": "tsc --build",
+		"tsc-watch": "tsc --watch",
 		"watch": "nodemon --exec \"npm run build && npm start\" --watch src -e ts"
 	},
 	"keywords": [],
@@ -25,5 +25,10 @@
 		"@colyseus/schema": "^1.0.45",
 		"detect-collisions": "^6.6.11",
 		"sat": "^0.9.0"
+	},
+	"exports": {
+		".": {
+			"world/*": "./dist/world/*"
+		}
 	}
 }
