disable naming convent, allow empty function

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,9 @@
 			"extends": ["xo-typescript"],
 			"files": ["*.ts", "*.tsx"],
 			"rules": {
-				"@typescript-eslint/naming-convention": "off"
+				"@typescript-eslint/naming-convention": "off",
+				"no-empty-function": "off",
+				"@typescript-eslint/no-empty-function": "off"
 			}
 		}
 	],
