--- a/package.json
+++ b/package.json
@@ -27,8 +27,18 @@
 		"sat": "^0.9.0"
 	},
 	"exports": {
-		".": {
-			"world/*": "./dist/world/*"
-		}
+		".": "./src/index.ts",
+		"./effect/*": "./src/effect/*",
+		"./entity/*": "./src/entity/*",
+		"./player/*": "./src/player/*",
+		"./util/*": "./src/util/*",
+		"./world/*": "./dist/world/*",
+		"./effect": "./src/effect/index.ts",
+		"./entity": "./src/entity/index.ts",
+		"./player": "./src/player/index.ts",
+		"./util": "./src/util/index.ts",
+		"./world": "./dist/world/index.js",
+		"./stats": "./src/stats.ts",
+		"./types": "./src/types.ts"
 	}
 }
