--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"start": "node dist/index.js",
-		"watch": "tsc --watch",
+		"watch": "tsc --build --watch",
 		"build": "tsc --build"
 	},
 	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"author": "khoakomlem",
+	"license": "MIT",
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": ">=5.43.0",
 		"@typescript-eslint/parser": ">=5.43.0",
