--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "khoakomlem",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/ungap__structured-clone": "^0.3.0",
 		"@typescript-eslint/eslint-plugin": ">=5.43.0",
 		"@typescript-eslint/parser": ">=5.43.0",
 		"eslint": ">=8.0.0",
@@ -23,7 +24,9 @@
 	},
 	"dependencies": {
 		"@colyseus/schema": "^1.0.45",
+		"@ungap/structured-clone": "^1.0.2",
 		"detect-collisions": "^6.6.11",
+		"eventemitter3": "^5.0.0",
 		"sat": "^0.9.0"
 	},
 	"exports": {
