--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 	"dependencies": {
 		"@colyseus/schema": "^1.0.45",
 		"@ungap/structured-clone": "^1.0.2",
+		"await-to-js": "^3.0.0",
 		"detect-collisions": "^6.6.11",
-		"eventemitter3": "^5.0.0",
 		"sat": "^0.9.0"
 	},
 	"exports": {
