--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
 		"@ungap/structured-clone": "^1.0.2",
 		"await-to-js": "^3.0.0",
 		"detect-collisions": "^6.6.11",
+		"poly-decomp": "^0.3.0",
 		"random": "^4.1.0",
-		"sat": "^0.9.0"
+		"sat": "^0.9.0",
+		"visibility-polygon": "^1.1.0"
 	},
 	"exports": {
 		".": "./dist/index.js",
