--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
 	"scripts": {
 		"start": "node dist/index.js",
 		"watch": "tsc --build --watch",
-		"build": "tsc --build"
+		"build": "tsc --build",
+		"rl:major": "tsc --build && npm version $(semver %npm_package_version% -i major)",
+		"rl:minor": "tsc --build && npm version $(semver %npm_package_version% -i minor)",
+		"rl:patch": "tsc --build && npm version $(semver %npm_package_version% -i patch)"
 	},
-	"keywords": [],
+	"keywords": [
+		"gunsurvival",
+		"physic",
+		"game",
+		"shooting"
+	],
 	"author": "khoakomlem",
 	"license": "MIT",
 	"devDependencies": {
@@ -21,6 +29,7 @@
 		"eslint-config-xo": "^0.43.1",
 		"eslint-config-xo-typescript": "^0.55.1",
 		"nodemon": "^2.0.20",
+		"semver": "^7.3.8",
 		"typescript": ">=4.4"
 	},
 	"dependencies": {
@@ -37,11 +46,13 @@
 		".": "./dist/index.js",
 		"./effect/*": "./dist/effect/*",
 		"./entity/*": "./dist/entity/*",
+		"./item/*": "./dist/item/*",
 		"./player/*": "./dist/player/*",
 		"./util/*": "./dist/util/*",
 		"./world/*": "./dist/world/*",
 		"./effect": "./dist/effect/index.js",
 		"./entity": "./dist/entity/index.js",
+		"./item": "./dist/item/index.js",
 		"./player": "./dist/player/index.js",
 		"./util": "./dist/util/index.js",
 		"./world": "./dist/world/index.js",
