--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 		"build": "tsc --build",
 		"rl:major": "tsc --build && npm version $(semver %npm_package_version% -i major)",
 		"rl:minor": "tsc --build && npm version $(semver %npm_package_version% -i minor)",
-		"rl:patch": "tsc --build && npm version $(semver %npm_package_version% -i patch)"
+		"rl:patch": "tsc --build && npm version $(semver %npm_package_version% -i patch)",
+		"lint": "npm run lint:prettier && npm run lint:eslint",
+		"lint:prettier": "prettier --write .",
+		"lint:eslint": "eslint --fix ."
 	},
 	"keywords": [
 		"gunsurvival",
@@ -30,6 +33,7 @@
 		"eslint-config-xo": "^0.43.1",
 		"eslint-config-xo-typescript": "^0.55.1",
 		"nodemon": "^2.0.20",
+		"prettier": "^2.8.8",
 		"semver": "^7.3.8",
 		"typed-emitter": "^2.1.0",
 		"typescript": ">=4.4"
