--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
 		"@types/events": "^3.0.0",
 		"@types/random": "^3.0.1",
 		"@types/ungap__structured-clone": "^0.3.0",
-		"@typescript-eslint/eslint-plugin": ">=5.43.0",
-		"@typescript-eslint/parser": ">=5.43.0",
-		"eslint": ">=8.0.0",
+		"@typescript-eslint/eslint-plugin": ">=6.2.0",
+		"@typescript-eslint/parser": ">=6.2.0",
+		"eslint": ">=8.46.0",
 		"eslint-config-xo": "^0.43.1",
-		"eslint-config-xo-typescript": "^0.55.1",
-		"nodemon": "^2.0.20",
-		"prettier": "^2.8.8",
-		"semver": "^7.3.8",
+		"eslint-config-xo-typescript": "^1.0.1",
+		"nodemon": "^3.0.1",
+		"prettier": "^3.0.0",
+		"semver": "^7.5.4",
 		"typed-emitter": "^2.1.0",
-		"typescript": ">=4.4"
+		"typescript": ">=5.1.6"
 	},
 	"dependencies": {
-		"@ungap/structured-clone": "^1.0.2",
+		"@ungap/structured-clone": "^1.2.0",
 		"await-to-js": "^3.0.0",
-		"detect-collisions": "^6.6.11",
+		"detect-collisions": "9.1.1",
 		"events": "^3.3.0",
 		"poly-decomp": "^0.3.0",
 		"random": "^4.1.0",
